--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,8 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/css/main.css",
+              "src/assets/css/util.css",
               "src/assets/css/style.css",
               "src/assets/css/select1.css"
             ],
@@ -40,6 +42,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "src/assets/js/main.js",
               "src/assets/js/custom.js"
             ]
           },
