--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-select/ng-select": "^6.1.0",
+    "@types/jquery": "^3.5.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "popper.js": "^1.16.1",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "sweetalert2": "^11.1.5",
     "ngx-cookie-service": "^10.0.1",
     "ngb-modal": "^2.0.3",
