--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.5",
     "@ng-select/ng-select": "^6.1.0",
     "@types/jquery": "^3.5.6",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3",
