--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/assets/css/main.css",
               "src/assets/css/util.css",
               "src/assets/css/style.css",
