--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-select/ng-select": "^6.1.0",
     "@types/jquery": "^3.5.6",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3",
