--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "@ng-select/ng-select": "^6.1.0",
     "@types/jquery": "^3.5.6",
-    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
-    "ngx-bootstrap": "^6.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "popper.js": "^1.16.1",
     "jquery": "^3.6.0",
-    "sweetalert2": "^11.1.5",
-    "ngx-cookie-service": "^10.0.1",
+    "ng-select": "^1.0.2",
     "ngb-modal": "^2.0.3",
-    "ng-select": "^1.0.2"
+    "ngx-bootstrap": "^6.1.0",
+    "ngx-cookie-service": "^10.0.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.5",
+    "tslib": "^2.0.0",
+    "xlsx": "^0.17.2",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
