--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "json-server": "^0.17.0",
     "ng-select": "^1.0.2",
     "ngb-modal": "^2.0.3",
     "ngx-bootstrap": "^6.1.0",
