--- a/angular.json
+++ b/angular.json
@@ -107,9 +107,22 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+              "src/assets/css/main.css",
+              "src/assets/css/util.css",
+              "src/assets/css/style.css",
+              "src/assets/css/select1.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/underscore/underscore.js",
+              "src/assets/js/custom.js",
+              "src/assets/js/main.js"
+            ]
           }
         },
         "lint": {
